feat: added registration endpoint (#21)
