# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: elrek-system_GO
   description: Ez lenni elrek-system_GO backend cuccli
-  version: 1.0.0
+  version: 1.3.0
 #servers:
 #  - url: 'yas'
 paths:
@@ -38,6 +38,30 @@ paths:
                 $ref: './models/responses.yaml#/components/schemas/MessageOnlyResponse'
       tags:
         - login
+  # MARK: Check permission
+  /check-permission:
+    get:
+      description: Endpoint for checking user permission
+      responses:
+        200:
+          description: Returns 2 booleans, true if user is admin / is authenticated, false if not
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isAdmin:
+                    type: boolean
+                  isAuthenticated:
+                    type: boolean
+        default:
+          description: Unexpected error, error is returned in message
+          content:
+            application/json:
+              schema:
+                $ref: './models/responses.yaml#/components/schemas/MessageOnlyResponse'
+      tags:
+        - login
   # MARK: Logout
   /logout:
     post:
@@ -52,6 +76,32 @@ paths:
                 example: 'User logged out successfully'
         401:
           description: User was not logged out successfully
+          content:
+            application/json:
+              schema:
+                $ref: './models/responses.yaml#/components/schemas/MessageOnlyResponse'
+        default:
+          description: Unexpected error, error is returned in message
+          content:
+            application/json:
+              schema:
+                $ref: './models/responses.yaml#/components/schemas/MessageOnlyResponse'
+      tags:
+        - login
+  # MARK: Registration
+  /register:
+    post:
+      description: Endpoint for user registration
+      requestBody:
+        description: User object that needs to be registered
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './models/user.yaml#/components/schemas/UserRegister'
+      responses:
+        200:
+          description: User was registered successfully
           content:
             application/json:
               schema:
